# pdf-rag-processor

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py  models.py  services.py
tests/: test_main.py
