[project]
name = "pdf-rag-processor"
version = "0.1.0"
description = "Microservice for PDF extraction and RAG-ready chunking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pypdf>=4.0.0",
    "tiktoken>=0.5.0",
    "python-multipart>=0.0.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
    "httpx>=0.26.0",
    "pre-commit>=3.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "strict"
